--- a/episodes/season_25.yml
+++ b/episodes/season_25.yml
@@ -8,7 +8,7 @@ episodes:
     a terrorist plot to blow up the power plant.
   simpsonsworld_id: 307191875741
   good: false
-  character: 
+  characters: 
 - title: Treehouse of Horror XXIV
   season: 25
   episode: 2
@@ -17,7 +17,7 @@ episodes:
     Lisa's body; Homer plots to kill Moe at a circus freak show.
   simpsonsworld_id: 310259779794
   good: false
-  character: 
+  characters: 
 - title: Four Regrettings and a Funeral
   season: 25
   episode: 3
@@ -26,7 +26,7 @@ episodes:
     regret.
   simpsonsworld_id: 311688259548
   good: false
-  character: 
+  characters: 
 - title: YOLO
   season: 25
   episode: 4
@@ -35,7 +35,7 @@ episodes:
     honor code.
   simpsonsworld_id: 304473155645
   good: false
-  character: 
+  characters: 
 - title: Labor Pains
   season: 25
   episode: 5
@@ -44,7 +44,7 @@ episodes:
     increase from a greedy football team owner.
   simpsonsworld_id: 311105091548
   good: false
-  character: 
+  characters: 
 - title: The Kid Is All Right
   season: 25
   episode: 6
@@ -52,7 +52,7 @@ episodes:
     to realize that she and Isabel are on opposite sides of the political spectrum.
   simpsonsworld_id: 310523971648
   good: false
-  character: 
+  characters: 
 - title: Yellow Subterfuge
   season: 25
   episode: 7
@@ -61,7 +61,7 @@ episodes:
     that he sell the foreign rights to his television show.
   simpsonsworld_id: 304476739664
   good: false
-  character: 
+  characters: 
 - title: White Christmas Blues
   season: 25
   episode: 8
@@ -70,7 +70,7 @@ episodes:
     Lisa vows to give her loved ones modest gifts that come from the heart.
   simpsonsworld_id: 307199043880
   good: false
-  character: 
+  characters: 
 - title: Steal This Episode
   season: 25
   episode: 9
@@ -78,7 +78,7 @@ episodes:
     movies from the Internet.
   simpsonsworld_id: 310523459925
   good: false
-  character: 
+  characters: 
 - title: Married to the Blob
   season: 25
   episode: 10
@@ -86,7 +86,7 @@ episodes:
     the woman's father disapproves of the union.
   simpsonsworld_id: 310541379637
   good: false
-  character: 
+  characters: 
 - title: Specs and the City
   season: 25
   episode: 11
@@ -94,7 +94,7 @@ episodes:
     a Valentine's Day card from Bart.
   simpsonsworld_id: 307204163997
   good: false
-  character: 
+  characters: 
 - title: Diggs
   season: 25
   episode: 12
@@ -102,7 +102,7 @@ episodes:
     that the boy suffers from mental illness.
   simpsonsworld_id: 310529091639
   good: false
-  character: 
+  characters: 
 - title: The Man Who Grew Too Much
   season: 25
   episode: 13
@@ -110,7 +110,7 @@ episodes:
     Marge volunteers as a teen abstinence counselor.
   simpsonsworld_id: 307207235909
   good: false
-  character: 
+  characters: 
 - title: The Winter of His Content
   season: 25
   episode: 14
@@ -119,7 +119,7 @@ episodes:
     into an old man; a gang of bullies accepts Bart as one of their own.
   simpsonsworld_id: 307209283970
   good: false
-  character: 
+  characters: 
 - title: The War of Art
   season: 25
   episode: 15
@@ -128,7 +128,7 @@ episodes:
     money.
   simpsonsworld_id: 311117891947
   good: false
-  character: 
+  characters: 
 - title: You Don't Have to Live Like a Referee
   season: 25
   episode: 16
@@ -136,7 +136,7 @@ episodes:
     Homer is tapped to referee World Cup soccer in Brazil.
   simpsonsworld_id: 304489539783
   good: false
-  character: 
+  characters: 
 - title: Luca$
   season: 25
   episode: 17
@@ -144,7 +144,7 @@ episodes:
     Homer; after Bart hides Jailbird from the police, he begins receiving stolen gifts.
   simpsonsworld_id: 304500803520
   good: false
-  character: 
+  characters: 
 - title: Days of Future Future
   season: 25
   episode: 18
@@ -153,7 +153,7 @@ episodes:
     he's bitten by a zombie.
   simpsonsworld_id: 310257731892
   good: false
-  character: 
+  characters: 
 - title: What to Expect When Bart's Expecting
   season: 25
   episode: 19
@@ -162,7 +162,7 @@ episodes:
     conceive.
   simpsonsworld_id: 307214403888
   good: false
-  character: 
+  characters: 
 - title: Brick Like Me
   season: 25
   episode: 20
@@ -170,7 +170,7 @@ episodes:
     which everything is made of Lego toys.
   simpsonsworld_id: 311243331763
   good: false
-  character: 
+  characters: 
 - title: Pay Pal
   season: 25
   episode: 21
@@ -179,7 +179,7 @@ episodes:
     best friend.
   simpsonsworld_id: 304502851923
   good: false
-  character: 
+  characters: 
 - title: Yellow Badge of Cowardge
   season: 25
   episode: 22
@@ -188,7 +188,7 @@ episodes:
     after Springfield's holiday celebration is canceled.
   simpsonsworld_id: 307219523604
   good: false
-  character: 
+  characters: 
 - title: The Longest Daycare
   season: 25
   episode: 25
@@ -197,4 +197,4 @@ episodes:
     for Best Animated Short. Presented by FXX.'
   simpsonsworld_id: 588949571786
   good: false
-  character: 
+  characters: 
