--- a/episodes/season_03.yml
+++ b/episodes/season_03.yml
@@ -8,7 +8,7 @@ episodes:
     forgets her birthday.
   simpsonsworld_id: 272234051980
   good: false
-  character: 
+  characters: 
 - title: Mr. Lisa Goes to Washington
   season: 3
   episode: 2
@@ -16,7 +16,7 @@ episodes:
     in an essay contest on patriotism.
   simpsonsworld_id: 275196995796
   good: false
-  character: 
+  characters: 
 - title: When Flanders Failed
   season: 3
   episode: 3
@@ -24,7 +24,7 @@ episodes:
     when it performs poorly.
   simpsonsworld_id: 272051267562
   good: false
-  character: 
+  characters: 
 - title: Bart the Murderer
   season: 3
   episode: 4
@@ -32,7 +32,7 @@ episodes:
     when Principal Skinner mysteriously disappears.
   simpsonsworld_id: 288015427922
   good: false
-  character: 
+  characters: 
 - title: Homer Defined
   season: 3
   episode: 5
@@ -40,7 +40,7 @@ episodes:
     but what is perceived as his skill of being a quick thinker is actually dumb luck.
   simpsonsworld_id: 256843843704
   good: false
-  character: 
+  characters: 
 - title: Like Father, Like Clown
   season: 3
   episode: 6
@@ -48,7 +48,7 @@ episodes:
     Krustofsky, who disowned him for not carrying on the family tradition.
   simpsonsworld_id: 256874051703
   good: false
-  character: 
+  characters: 
 - title: Treehouse of Horror II
   season: 3
   episode: 7
@@ -56,7 +56,7 @@ episodes:
     tales of horror while they sleep.
   simpsonsworld_id: 272054339616
   good: false
-  character: 
+  characters: 
 - title: Lisa's Pony
   season: 3
   episode: 8
@@ -64,7 +64,7 @@ episodes:
     and buys her a pony.
   simpsonsworld_id: 310374467809
   good: false
-  character: 
+  characters: 
 - title: Saturdays of Thunder
   season: 3
   episode: 9
@@ -72,7 +72,7 @@ episodes:
     in building a soap box racer.
   simpsonsworld_id: 256898115598
   good: false
-  character: 
+  characters: 
 - title: Flaming Moe's
   season: 3
   episode: 10
@@ -80,7 +80,7 @@ episodes:
     turns into a sensation, Moe takes credit, and the profits, from its success.
   simpsonsworld_id: 305663555961
   good: false
-  character: 
+  characters: 
 - title: Burns Verkaufen der Kraftwerk
   season: 3
   episode: 11
@@ -88,7 +88,7 @@ episodes:
     from Mr. Burns.
   simpsonsworld_id: 310380099512
   good: false
-  character: 
+  characters: 
 - title: I Married Marge
   season: 3
   episode: 12
@@ -96,7 +96,7 @@ episodes:
     born.
   simpsonsworld_id: 299618371603
   good: false
-  character: 
+  characters: 
 - title: Radio Bart
   season: 3
   episode: 13
@@ -105,7 +105,7 @@ episodes:
     same well, Bart cannot get anyone to save him.
   simpsonsworld_id: 272052803895
   good: false
-  character: 
+  characters: 
 - title: Lisa the Greek
   season: 3
   episode: 14
@@ -113,7 +113,7 @@ episodes:
     gambles on so she can be closer to her father.
   simpsonsworld_id: 273404483565
   good: false
-  character: 
+  characters: 
 - title: Homer Alone
   season: 3
   episode: 15
@@ -121,7 +121,7 @@ episodes:
     vacation, leaving the rest of the family to realize how much she does for them.
   simpsonsworld_id: 272224835795
   good: false
-  character: 
+  characters: 
 - title: Bart the Lover
   season: 3
   episode: 16
@@ -129,7 +129,7 @@ episodes:
     placed a "personals" ad in the local newspaper, he decides to create fake correspondence.
   simpsonsworld_id: 272228931984
   good: false
-  character: 
+  characters: 
 - title: Homer at the Bat
   season: 3
   episode: 17
@@ -138,7 +138,7 @@ episodes:
     members of the team.
   simpsonsworld_id: 310380099768
   good: false
-  character: 
+  characters: 
 - title: Separate Vocations
   season: 3
   episode: 18
@@ -146,7 +146,7 @@ episodes:
     crowd after they both take career aptitude tests.
   simpsonsworld_id: 263513155607
   good: false
-  character: 
+  characters: 
 - title: Dog of Death
   season: 3
   episode: 19
@@ -154,14 +154,14 @@ episodes:
     Little Helper needs an expensive operation to save its life.
   simpsonsworld_id: 274404419620
   good: false
-  character: 
+  characters: 
 - title: Colonel Homer
   season: 3
   episode: 20
   description: Homer becomes the manager of a beautiful Country Western singer.
   simpsonsworld_id: 272215619762
   good: false
-  character: 
+  characters: 
 - title: Black Widower
   season: 3
   episode: 21
@@ -169,7 +169,7 @@ episodes:
     than Sideshow Bob.
   simpsonsworld_id: 272221251812
   good: false
-  character: 
+  characters: 
 - title: The Otto Show
   season: 3
   episode: 22
@@ -177,7 +177,7 @@ episodes:
     school bus and moves in with the Simpsons.
   simpsonsworld_id: 279103043694
   good: false
-  character: 
+  characters: 
 - title: Bart's Friend Falls in Love
   season: 3
   episode: 23
@@ -185,7 +185,7 @@ episodes:
     to their school.
   simpsonsworld_id: 280393283967
   good: false
-  character: 
+  characters: 
 - title: Brother, Can You Spare Two Dimes?
   season: 3
   episode: 24
@@ -193,4 +193,4 @@ episodes:
     a new invention: a translator of baby gibberish.'
   simpsonsworld_id: 279098435798
   good: false
-  character: 
+  characters: 
