--- a/episodes/season_14.yml
+++ b/episodes/season_14.yml
@@ -8,7 +8,7 @@ episodes:
     travel to an island inhabited by 'manimals.'
   simpsonsworld_id: 221301315863
   good: false
-  character: 
+  characters: 
 - title: How I Spent My Strummer Vacation
   season: 14
   episode: 2
@@ -17,7 +17,7 @@ episodes:
     a fantasy rock star camp run by The Rolling Stones.
   simpsonsworld_id: 221293123693
   good: false
-  character: 
+  characters: 
 - title: Bart vs. Lisa vs. 3rd Grade
   season: 14
   episode: 3
@@ -25,7 +25,7 @@ episodes:
     class.
   simpsonsworld_id: 221347395722
   good: false
-  character: 
+  characters: 
 - title: Large Marge
   season: 14
   episode: 4
@@ -34,7 +34,7 @@ episodes:
     leads to a public relations nightmare for Krusty.
   simpsonsworld_id: 221352515586
   good: false
-  character: 
+  characters: 
 - title: Helter Shelter
   season: 14
   episode: 5
@@ -43,7 +43,7 @@ episodes:
     in a house from the 1800s.
   simpsonsworld_id: 221388355650
   good: false
-  character: 
+  characters: 
 - title: The Great Louse Detective
   season: 14
   episode: 6
@@ -51,7 +51,7 @@ episodes:
     prison to help identify the culprit before he strikes again.
   simpsonsworld_id: 221467203550
   good: false
-  character: 
+  characters: 
 - title: Special Edna
   season: 14
   episode: 7
@@ -60,7 +60,7 @@ episodes:
     Krabappel forever... and asks Bart to sabotage the affair.
   simpsonsworld_id: 221467715532
   good: false
-  character: 
+  characters: 
 - title: The Dad Who Knew Too Little
   season: 14
   episode: 8
@@ -68,7 +68,7 @@ episodes:
     he doesn't know very much about his daughter.
   simpsonsworld_id: 221531715548
   good: false
-  character: 
+  characters: 
 - title: The Strong Arms of The Ma
   season: 14
   episode: 9
@@ -76,7 +76,7 @@ episodes:
     ends up living in the basement... until she turns into a fearless bodybuilder.
   simpsonsworld_id: 221532739689
   good: false
-  character: 
+  characters: 
 - title: Pray Anything
   season: 14
   episode: 10
@@ -85,7 +85,7 @@ episodes:
     for damages... and is awarded the church itself.
   simpsonsworld_id: 221526595805
   good: false
-  character: 
+  characters: 
 - title: Barting Over
   season: 14
   episode: 11
@@ -94,7 +94,7 @@ episodes:
     emancipation and moves out of the house.
   simpsonsworld_id: 221696067841
   good: false
-  character: 
+  characters: 
 - title: I'm Spelling as Fast as I Can
   season: 14
   episode: 12
@@ -103,7 +103,7 @@ episodes:
     limited-time-only rib sandwich.
   simpsonsworld_id: 221698627830
   good: false
-  character: 
+  characters: 
 - title: A Star is Born-Again
   season: 14
   episode: 13
@@ -112,7 +112,7 @@ episodes:
     to have premarital sex.
   simpsonsworld_id: 221695043703
   good: false
-  character: 
+  characters: 
 - title: Mr. Spritz Goes To Washington
   season: 14
   episode: 14
@@ -121,7 +121,7 @@ episodes:
     so he can change the law.
   simpsonsworld_id: 221699651686
   good: false
-  character: 
+  characters: 
 - title: C.E.D'oh
   season: 14
   episode: 15
@@ -130,7 +130,7 @@ episodes:
     Burns... only to realize that running the plant means being away from family.
   simpsonsworld_id: 221696067982
   good: false
-  character: 
+  characters: 
 - title: "'Scuse Me While I Miss The Sky"
   season: 14
   episode: 16
@@ -139,7 +139,7 @@ episodes:
     to restore his coolness by obtaining a hood ornament from Fat Tony's car.
   simpsonsworld_id: 221700675635
   good: false
-  character: 
+  characters: 
 - title: Three Gays of the Condo
   season: 14
   episode: 17
@@ -147,7 +147,7 @@ episodes:
     years earlier that implies she resents him.
   simpsonsworld_id: 221699139984
   good: false
-  character: 
+  characters: 
 - title: Dude, Where's My Ranch?
   season: 14
   episode: 18
@@ -156,7 +156,7 @@ episodes:
     from their land.
   simpsonsworld_id: 221700163549
   good: false
-  character: 
+  characters: 
 - title: Old Yeller-Belly
   season: 14
   episode: 19
@@ -164,7 +164,7 @@ episodes:
     his original owner comes out of the woodwork and claims the dog belongs to him.
   simpsonsworld_id: 221701187546
   good: false
-  character: 
+  characters: 
 - title: Brake My Wife, Please
   season: 14
   episode: 20
@@ -173,7 +173,7 @@ episodes:
     in the house takes its toll-and ends up running Homer over in her car.
   simpsonsworld_id: 229724227970
   good: false
-  character: 
+  characters: 
 - title: The Bart of War
   season: 14
   episode: 21
@@ -182,7 +182,7 @@ episodes:
     Braves.
   simpsonsworld_id: 229731395601
   good: false
-  character: 
+  characters: 
 - title: Moe Baby Blues
   season: 14
   episode: 22
@@ -191,4 +191,4 @@ episodes:
     responsible for the baby's disappearance.
   simpsonsworld_id: 228412483812
   good: false
-  character: 
+  characters: 
