--- a/episodes/season_06.yml
+++ b/episodes/season_06.yml
@@ -7,7 +7,7 @@ episodes:
     soars after her family buys a swimming pool during a heat wave.
   simpsonsworld_id: 300925507538
   good: true
-  character: 
+  characters:
 - title: Lisa's Rival
   season: 6
   episode: 2
@@ -16,7 +16,7 @@ episodes:
     it will net him a fortune.
   simpsonsworld_id: 278809667691
   good: maybe
-  character: 
+  characters:
 - title: Another Simpsons Clip Show
   season: 6
   episode: 3
@@ -24,7 +24,7 @@ episodes:
     recalls romantic encounters from their past.
   simpsonsworld_id: 300928067775
   good: maybe
-  character: 
+  characters:
 - title: Itchy and Scratchy Land
   season: 6
   episode: 4
@@ -32,7 +32,7 @@ episodes:
     and Scratchy cartoons.
   simpsonsworld_id: 283752003577
   good: true
-  character: 
+  characters:
 - title: Sideshow Bob Roberts
   season: 6
   episode: 5
@@ -40,14 +40,14 @@ episodes:
     from prison.
   simpsonsworld_id: 275729987504
   good: true
-  character: 
+  characters:
 - title: Treehouse of Horror V
   season: 6
   episode: 6
   description: The Simpsons spin three tales of Halloween horror.
   simpsonsworld_id: 299597891663
   good: true
-  character: 
+  characters:
 - title: Bart's Girlfriend
   season: 6
   episode: 7
@@ -55,7 +55,7 @@ episodes:
     to discover that she is more of a hellion than he is.
   simpsonsworld_id: 275744323759
   good: true
-  character: 
+  characters:
 - title: Lisa on Ice
   season: 6
   episode: 8
@@ -63,14 +63,14 @@ episodes:
     critical game.
   simpsonsworld_id: 275746371575
   good: true
-  character: 
+  characters:
 - title: Homer Badman
   season: 6
   episode: 9
   description: Homer is wrongly accused of committing sexual harassment.
   simpsonsworld_id: 275746883653
   good: true
-  character: 
+  characters:
 - title: Grampa vs. Sexual Inadequacy
   season: 6
   episode: 10
@@ -78,7 +78,7 @@ episodes:
     in men, Grampa reveals that Homer's conception was accidental.
   simpsonsworld_id: 274264643876
   good: true
-  character: 
+  characters:
 - title: Fear of Flying
   season: 6
   episode: 11
@@ -86,7 +86,7 @@ episodes:
     is afraid to fly.
   simpsonsworld_id: 305684547546
   good: false
-  character: 
+  characters:
 - title: Homer the Great
   season: 6
   episode: 12
@@ -94,28 +94,28 @@ episodes:
     secret organization.
   simpsonsworld_id: 275745859881
   good: true
-  character: 
+  characters:
 - title: And Maggie Makes Three
   season: 6
   episode: 13
   description: Homer recounts how Maggie's accidental birth changed his life forever.
   simpsonsworld_id: 278796867754
   good: false
-  character: 
+  characters:
 - title: Bart's Comet
   season: 6
   episode: 14
   description: Bart discovers a comet that is on a collision course with Springfield.
   simpsonsworld_id: 275746883888
   good: true
-  character: 
+  characters:
 - title: Homie the Clown
   season: 6
   episode: 15
   description: Homer enrolls in a clown college franchised by Krusty the Clown.
   simpsonsworld_id: 279723587611
   good: true
-  character: 
+  characters:
 - title: Bart vs. Australia
   season: 6
   episode: 16
@@ -123,7 +123,7 @@ episodes:
     from down under into accepting an expensive collect call.
   simpsonsworld_id: 275748931680
   good: true
-  character: 
+  characters:
 - title: Homer vs. Patty and Selma
   season: 6
   episode: 17
@@ -131,7 +131,7 @@ episodes:
     out the family's savings by investing in pumpkins.
   simpsonsworld_id: 305686083529
   good: true
-  character: 
+  characters:
 - title: A Star Is Burns
   season: 6
   episode: 18
@@ -139,7 +139,7 @@ episodes:
     Springfield's film festival.
   simpsonsworld_id: 283753539580
   good: true
-  character: 
+  characters:
 - title: Lisa's Wedding
   season: 6
   episode: 19
@@ -147,7 +147,7 @@ episodes:
     hand in marriage in the year 2010.
   simpsonsworld_id: 275751491511
   good: maybe
-  character: 
+  characters:
 - title: Two Dozen and One Greyhounds
   season: 6
   episode: 20
@@ -155,7 +155,7 @@ episodes:
     who wants to use their hides for a new tuxedo.
   simpsonsworld_id: 278807107855
   good: true
-  character: 
+  characters:
 - title: The PTA Disbands
   season: 6
   episode: 21
@@ -163,7 +163,7 @@ episodes:
     charge of his class.
   simpsonsworld_id: 294780995610
   good: true
-  character: 
+  characters:
 - title: "'Round Springfield"
   season: 6
   episode: 22
@@ -171,14 +171,14 @@ episodes:
     ingests a piece of jagged metal while eating Krusty-O cereal.
   simpsonsworld_id: 275755587777
   good: maybe
-  character: 
+  characters:
 - title: The Springfield Connection
   season: 6
   episode: 23
   description: Marge joins the police force.
   simpsonsworld_id: 305689155572
   good: true
-  character: 
+  characters:
 - title: Lemon of Troy
   season: 6
   episode: 24
@@ -186,7 +186,7 @@ episodes:
     tree is stolen by a gang of children from across the border.
   simpsonsworld_id: 274269763684
   good: true
-  character: 
+  characters:
 - title: Who Shot Mr. Burns? (Part One)
   season: 6
   episode: 25
@@ -195,4 +195,4 @@ episodes:
     to block out the sun.
   simpsonsworld_id: 294781507859
   good: true
-  character: 
+  characters:
